--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,12 @@
 spring.application.name=SaraShopApi
 
-# Configuración para el acceso a la Base de Datos
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # Puerto donde escucha el servidor una vez se inicie
-server.port=8081
+server.port=8080
 
-# Datos de conexión con la base de datos MySQL en XAMPP
+# Datos de conexion con la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/sara_db
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
-
-# Dialecto de Hibernate para MySQL
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-
-# Opcional: para ver las consultas SQL en la consola
-spring.jpa.show-sql=true
-
-# Opcional: para formatear las consultas SQL de forma legible
-spring.jpa.properties.hibernate.format_sql=true
